# teste

./: README.md  setup.cfg
.github/workflows/: publish.yml  testcov.yml
